@@ -42,10 +42,6 @@
 
                 <allow send_destination="org.freedesktop.login1"
                        send_interface="org.freedesktop.login1.Manager"
-                       send_member="GetSessionByPID"/>
-
-                <allow send_destination="org.freedesktop.login1"
-                       send_interface="org.freedesktop.login1.Manager"
                        send_member="GetUser"/>
 
                 <allow send_destination="org.freedesktop.login1"
